@@ -866,7 +866,7 @@ view.gutter.marker=Marker: {0}
 view.status.add-marker=Shortcut for new marker? [{0}]
 view.status.auto-wrap=Search string not found; wrapping around!
 view.status.bracket=Matches line {0}: {1}
-view.status.caret-tooltip=Line and column number (line,column[-virtual] relative%)
+view.status.caret-tooltip=Offset, line and column number (offset,line,column[-virtual] relative%)
 view.status.copy-append-string-register=Register name to copy append to? [{0}]
 view.status.copy-string-register=Register to copy to? [{0}]
 view.status.cut-append-string-register=Register to cut append to? [{0}]
